<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="DUT_LogowanieBledow_Zdarzenie" Id="{396c0dbc-be5a-4b28-91d9-aa7ff0b34436}">
    <Declaration><![CDATA[TYPE DUT_LogowanieBledow_Zdarzenie :
STRUCT
	iIdZdarzenia							: INT;
	sNrKomponentu							: STRING[10];
	sKodBledu								: STRING[10];
	byRodzajZdarzenia						: BYTE;	//1 - blad, 2 - ostrzezenie, 3 - wiadomosc, 4 - safety
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>