<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_LogowanieBledow" Id="{031458d1-4327-4414-a5e1-6329ee0946ec}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'global_init_slot' := '40550'}
VAR_GLOBAL
	arrElementyWykonawcze 					: ARRAY [1..GVL_LogowanieBledow_Stale.MAX_ILOSC_ELEMENTOW] OF 
																ITF_LogowanieBledow_ElementWykonawczy := [
																	GVL_Elementy.fbSilownik.fbLBKomunikacja, 
																	GVL_Elementy.fbSilownik1.fbLBKomunikacja,
																	GVL_Elementy.fbPrzesuwacz.fbLBKomunikacja];

	fbLoger 								: FB_LogowanieBledow (	tablica := arrElementyWykonawcze,
																	iIloscDodanychElementow := 3);
	bWyswietlAlarmy							: BOOL;																
	
END_VAR
VAR_GLOBAL //PERSISTENT
	arrTablicaZdarzenZapamietancyh			: ARRAY [1..GVL_LogowanieBledow_Stale.MAX_ILOSC_ZDARZEN_ZAPAMIETANYCH] OF DUT_LogowanieBledow_Zapamietanych;																
	
	iIloscZdarzenZapamietanych				: INT;	//ilosc zdarzen ktore wystapiły
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>